<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AstrBot</string>
    <string name="nav_terminal">终端</string>
    <string name="nav_webview">浏览器</string>
    <string name="nav_settings">设置</string>
    <string name="tab_new">新标签</string>
    <string name="input_hint">输入命令…</string>
    <string name="url_hint">输入网址…</string>
    <string name="settings_general">通用设置</string>
    <string name="settings_server">服务器</string>
    <string name="settings_password">密码管理</string>
    <string name="settings_theme">主题</string>
    <string name="settings_foreground">前台服务</string>
    <string name="service_channel_name">AstrBot 服务</string>
    <string name="service_channel_desc">保持后台运行</string>
    <string name="service_running">AstrBot 正在后台运行</string>
</resources>
